--- a/WRService/Base.lproj/Main.storyboard
+++ b/WRService/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NkB-yy-5ow">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -39,6 +39,7 @@
                             <constraint firstItem="1gy-te-and" firstAttribute="top" secondItem="smG-vM-hlU" secondAttribute="bottom" constant="36" id="zAb-Co-KiY"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="hdQ-vw-9rd"/>
                     <connections>
                         <outlet property="p1" destination="smG-vM-hlU" id="F1w-mL-QCr"/>
                         <outlet property="p2" destination="1gy-te-and" id="qAa-G1-Oj3"/>
@@ -46,7 +47,44 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="123.68815592203899"/>
+            <point key="canvasLocation" x="585" y="313"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="spW-51-0We">
+            <objects>
+                <viewController id="zlT-uN-L0b" customClass="HttpViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bvt-hg-j9n"/>
+                        <viewControllerLayoutGuide type="bottom" id="MWd-Ng-5xJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4z2-ia-vGO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="lEL-Nv-cft"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="45g-gG-ht7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="585" y="-392"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="e6p-aI-fbB">
+            <objects>
+                <tabBarController id="NkB-yy-5ow" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="IBc-BC-BIu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="zlT-uN-L0b" kind="relationship" relationship="viewControllers" id="TZN-G1-SPT"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="y4W-9F-Ozf"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VRJ-Rd-ujB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-367" y="-65"/>
         </scene>
     </scenes>
 </document>
